add new background, music and new levels

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -70,6 +70,12 @@
   font-weight: 600;
   font-style: normal;
 }
+@font-face {
+  font-family: "LobsterTwo";
+  src: url("../assets/bgNew2024/LobsterTwo-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
 html, body {
   width: 100%;
   height: 100%;
@@ -819,7 +825,7 @@ html, body {
 }
 
 .menu__level_stars .level_star:last-child {
-  margin-right: 0;
+  margin-right: 0 !important;
 }
 
 .menu__level .level_star {
@@ -1978,6 +1984,10 @@ b {
   background-image: url(../assets/settings/bg5.png);
 }
 
+.chosenBg6 {
+  background-image: url(../assets/settings/bg6.png);
+}
+
 .changeLeft, .changeRight {
   width: 20px;
   height: 39px;
@@ -2787,8 +2797,8 @@ b {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
-  width: 45px;
-  height: 45px;
+  width: 55px;
+  height: 55px;
   border-radius: 50%;
   background-size: 29%;
   cursor: pointer;
@@ -2804,9 +2814,9 @@ b {
   width: 100%;
   transform: scale(0.9) translateZ(0);
   filter: blur(15px);
-  background: linear-gradient(to left, #B4361A, #FF5A36, #9B2308, #bd4025, #ff2d00, #bd4025, #9B2308, #FF5A36, #B4361A);
+  background: linear-gradient(to left, #1C43EA, #848FF6, #A7C6F9, #BBE1FB, #6E42F5, #5489F6, #3758F4, #7064F5, #8BB8F8);
   background-size: 200% 200%;
-  animation: animateGlow 2s linear infinite;
+  animation: animateGlow 3s linear infinite;
 }
 
 .eventIcon {
@@ -2815,7 +2825,7 @@ b {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url(../assets/sq.png) center center no-repeat;
+  background: url(../assets/bgNew2024/newYearIcon.png) center center no-repeat;
   background-size: 100%;
 }
 
@@ -2881,10 +2891,18 @@ b {
     margin: 0;
   }
 }
+.updateText {
+  font-size: 2.1rem;
+}
+
 @media (min-width: 1000px) {
   .eventIcon-wrapper {
-    width: 75px;
-    height: 75px;
+    width: 85px;
+    height: 85px;
+  }
+
+  .updateText {
+    font-size: 2.3rem;
   }
 }
 @media (orientation: portrait) {
@@ -3350,7 +3368,7 @@ b {
   }
 
   .action-block_landscapeDoneWord {
-    display: none;
+    display: none !important;
   }
 
   .menu__tip {
@@ -3505,20 +3523,49 @@ b {
 }
 .timeToShowNextAdv {
   position: absolute;
-  bottom: -42px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 250px;
-  height: 35px;
+  bottom: -47px;
+  left: 6px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: white;
-  color: black;
-  font-size: 1.5rem;
-  border-radius: 10px;
   border: 1px solid black;
-  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.4);
+}
+
+.timeToShowNextAdv__time {
+  width: 22px;
+  height: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: -8px;
+  bottom: -8px;
+  color: black;
+  font-size: 1.3rem;
+  line-height: 1.3rem;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 50%;
+}
+
+@media (min-width: 1000px) {
+  .timeToShowNextAdv {
+    bottom: -57px;
+    left: 8px;
+    width: 55px;
+    height: 55px;
+  }
+
+  .timeToShowNextAdv__time {
+    width: 25px;
+    height: 25px;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
