--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3521,23 +3521,35 @@ b {
     height: 30px !important;
   }
 }
+.blackoutShowNextAdv {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+}
+
 .timeToShowNextAdv {
   position: absolute;
-  bottom: -47px;
-  left: 6px;
-  width: 45px;
-  height: 45px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 85px;
+  height: 85px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: white;
   border: 1px solid black;
+  z-index: 11;
 }
 
 .timeToShowNextAdv__time {
-  width: 22px;
-  height: 22px;
+  width: 32px;
+  height: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -3545,27 +3557,11 @@ b {
   right: -8px;
   bottom: -8px;
   color: black;
-  font-size: 1.3rem;
-  line-height: 1.3rem;
+  font-size: 1.7rem;
+  line-height: 1.7rem;
   background-color: white;
   border: 1px solid black;
   border-radius: 50%;
-}
-
-@media (min-width: 1000px) {
-  .timeToShowNextAdv {
-    bottom: -57px;
-    left: 8px;
-    width: 55px;
-    height: 55px;
-  }
-
-  .timeToShowNextAdv__time {
-    width: 25px;
-    height: 25px;
-    font-size: 1.5rem;
-    line-height: 1.5rem;
-  }
 }
 
 /*# sourceMappingURL=styles.css.map */
