--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -91,7 +91,7 @@ html,body
   font-family: Ubuntu-Light, sans-serif;
 }
 
-.svgIcon{
+.svgIcon, .sendButtonIcon{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -99,6 +99,10 @@ html,body
   width: 55%;
   height: 55%;
   fill: #66196C;
+}
+.sendButtonIcon{
+  width: 65%;
+  height: 65%;
 }
 .menu__button-back .svgIcon, .menu__tip .svgIcon{
   width: 60%;
@@ -794,7 +798,8 @@ html,body
 .menu__button-back:after, .menu__tip:after,
 .prev-location:after, .next-location:after, .switchSettings:after,
 .popUp__close:after, .switchShowLocation:after, .switchShop:after,
-.action-block__button-send:after, .endGame__menu:after{
+.action-block__button-send:after, .endGame__menu:after,
+.openBgChanger:after, .bgChanger .changeLeft:after, .bgChanger .changeRight:after{
   position: absolute;
   content: '';
   top: -10px;
@@ -1246,8 +1251,9 @@ html,body
   width: 43px;
   height: 43px;
 
-  background: url(../assets/sendWord.png) center center no-repeat, white;
-  background-size: 70%;
+  //background: url(../assets/sendWord.png) center center no-repeat, white;
+  //background-size: 70%;
+  background-color: white;
 
   border-radius: 15%;
 
@@ -2282,7 +2288,7 @@ b{
   .levelsTop{
     width: 100%;
     height: 60px;
-    padding: 8px 8px 0 8px;
+    margin: 8px 0;
     //align-items: start;
   }
   .levelsTop .switchShowLocation, .levelsTop .leaderBoard{
@@ -3592,4 +3598,48 @@ b{
   border: 1px solid black;
   border-radius: 50%;
 
+}
+
+.openBgChanger{
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+
+  width: 45px;
+  height: 45px;
+
+  background: url(../assets/bgChanger.png) center center no-repeat;
+  background-size: 100%;
+
+  cursor: pointer;
+}
+.chosenAppBg6 .openBgChanger{
+  right: -50px;
+}
+.bgChanger{
+  .changeLeft, .changeRight {
+    position: relative;
+    width: 25px;
+    height: 48.75px;
+  }
+  .changeDesign{
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  .chosenBg{
+    width: 277.5px;
+    height: 156px;
+    margin: 0 10px
+  }
+}
+
+@media (min-width: 1000px){
+  .openBgChanger{
+    width: 70px;
+    height: 70px;
+  }
+  .chosenAppBg6 .openBgChanger{
+    right: -80px;
+  }
 }
