--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -718,10 +718,14 @@ html, body {
 }
 
 .advert {
-  width: 15px;
+  width: 35px;
   height: 15px;
-  background: url("../assets/advert.png") center center no-repeat white;
-  background-size: 80%;
+  right: -20px;
+  justify-content: flex-end;
+  color: black;
+  font-size: 1rem;
+  background: url("../assets/advert.png") 18% center no-repeat white;
+  background-size: 40%;
 }
 
 .menu__level, .menu__words-amount {
@@ -1253,7 +1257,9 @@ html, body {
   }
 
   .advert {
-    width: 20px;
+    width: 40px;
+    right: -20px;
+    font-size: 1.2rem;
     height: 20px;
   }
 
@@ -1333,12 +1339,17 @@ html, body {
     height: 60px;
   }
 
-  .menu__tip_count {
+  .menu__tip_count, .advert {
     font-size: 1.7rem;
     line-height: 1.7rem;
     width: 50px;
     right: -30px;
     height: 20px;
+  }
+
+  .advert {
+    font-size: 1.6rem;
+    background-size: 36%;
   }
 
   .cart__item_tip {
@@ -3383,11 +3394,16 @@ b {
     margin: 0;
   }
 
-  .menu__tip_count {
+  .menu__tip_count, .advert {
     right: auto;
     left: 0;
     width: 100%;
     bottom: -8px;
+  }
+
+  .advert {
+    background-size: 32%;
+    font-size: 1.15rem;
   }
 
   .action-block__done-word {
