--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1699,7 +1699,15 @@ html,body
     height: 70px;
   }
 }
-
+.crossPromoWrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.crossPromoImg{
+  width: 300px;
+  height: 180px;
+}
 .levels__loc{
   //position: absolute;
   //right: 7px;
@@ -3461,7 +3469,13 @@ b{
 //    display: none;
 //  }
 //}
-
+.popUp__location{
+  display: flex;
+  flex-flow: column nowrap;
+}
+.popUp__locationName{
+  flex: 1 1 auto;
+}
 @media (orientation: portrait){
   .levels-wrapper {
     width: 100%;
