--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1761,6 +1761,10 @@ b {
   font-size: 1.8rem;
 }
 
+.levels-wrapper_veryBigLevels .level__big {
+  font-size: 1.5rem;
+}
+
 @media (min-width: 1000px) {
   .level__big {
     font-size: 3.5rem;
@@ -1768,6 +1772,10 @@ b {
 
   .levels-wrapper_bigLevels .level__big {
     font-size: 3.4rem;
+  }
+
+  .levels-wrapper_veryBigLevels .level__big {
+    font-size: 3.1rem;
   }
 }
 .authText {
@@ -2383,6 +2391,10 @@ b {
     font-size: 1.8rem;
   }
 
+  .levels-wrapper_veryBigLevels .level__big {
+    font-size: 1.5rem;
+  }
+
   .level .menu__level_stars {
     bottom: -12px;
   }
@@ -2420,6 +2432,10 @@ b {
 
   .levels-wrapper_bigLevels .level__big {
     font-size: 2.2rem;
+  }
+
+  .levels-wrapper_veryBigLevels .level__big {
+    font-size: 1.9rem;
   }
 
   .level .menu__level_stars {
@@ -3540,6 +3556,10 @@ b {
 
   .levels-wrapper_bigLevels .level__big {
     font-size: 1.35rem;
+  }
+
+  .levels-wrapper_veryBigLevels .level__big {
+    font-size: 1rem;
   }
 
   .level .menu__level_stars {
