--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4124,5 +4124,23 @@ select::-ms-expand {
     line-height: 2rem;
   }
 }
+.crossPromoText {
+  font-size: 1.7rem;
+}
+
+.crossPromoText_bold {
+  font-weight: bold;
+}
+
+@media (max-height: 400px) {
+  .crossPromoImg {
+    height: 150px;
+  }
+}
+@media (max-height: 350px) {
+  .crossPromoImg {
+    height: 130px;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
