--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -11,6 +11,7 @@
 @import 'halloween';
 @import 'valentines';
 @import 'games';
+@import 'egypt';
 
 .locationOpened{
     overflow: auto !important;
