--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4178,3 +4178,90 @@ select::-ms-expand {
     font-size: 2.1rem;
   }
 }
+
+.compliment-wrapper{
+  position: fixed;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.compliment{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(255, 255, 255, 0.9);
+  //border: 1px solid black;
+  border-radius: 20px;
+  padding: 5px 8px;
+  animation: anim-popoutin 2s linear forwards;
+}
+
+.compliment__text{
+  font-size: 4rem;
+  line-height: 4rem;
+  text-transform: uppercase;
+  background-image: linear-gradient(
+                  -225deg,
+                  #231557 0%,
+                  #44107a 29%,
+                  #ff1361 67%,
+                  #fff800 100%
+  );
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear forwards;
+  display: inline-block;
+
+}
+@media (max-width: 400px){
+  .compliment__text{
+    font-size: 3.5rem;
+    line-height: 3.5rem;
+  }
+}
+@media (min-width: 1000px){
+  .compliment__text{
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+}
+
+@keyframes textclip {
+  to {
+    background-position: -200% center;
+  }
+}
+
+
+@keyframes anim-popoutin {
+  0% {
+    transform: scale(0);
+    opacity: 0.8;
+  }
+  10% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  20%{
+    transform: scale(1);
+    opacity: 1;
+  }
+  90% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
