add good scroll

--- a/src/styles/stylesLocations.scss
+++ b/src/styles/stylesLocations.scss
@@ -12,6 +12,7 @@
 @import 'valentines';
 @import 'games';
 @import 'egypt';
+@import 'againSchool';
 
 .locationOpened{
     overflow: auto !important;
